cmake_minimum_required(VERSION 3.24)
project(untitled4)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled4 main.cpp sources/Character.cpp sources/Character.hpp sources/Cowboy.cpp sources/Cowboy.hpp sources/Ninja.cpp sources/Ninja.hpp sources/OldNinja.cpp sources/OldNinja.hpp sources/Point.cpp sources/Point.hpp sources/Team.cpp sources/Team.hpp sources/team2.cpp sources/team2.hpp sources/TrainedNinja.cpp sources/TrainedNinja.hpp sources/YoungNinja.cpp sources/YoungNinja.hpp sources/Character.cpp sources/Point.hpp sources/Team.cpp sources/Character.cpp sources/Team.cpp)
